--- a/NavidromeClient/Info.plist
+++ b/NavidromeClient/Info.plist
@@ -7,23 +7,16 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
-	<!-- Background Audio Playback -->
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>audio</string>
-		<string>background-processing</string>
-	</array>
-	<!-- Background Tasks -->
 	<key>BGTaskSchedulerPermittedIdentifiers</key>
 	<array>
 		<string>com.navidrome.client.refresh</string>
 	</array>
-	<!-- Audio Session Category -->
+	<key>CFBundleIdentifier</key>
+	<string></string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>audio-playback</string>
 	</array>
-	<!-- Lock Screen und Control Center -->
 	<key>NSBluetoothAlwaysUsageDescription</key>
 	<string>This app uses Bluetooth to stream audio to external devices.</string>
 	<key>NSBluetoothPeripheralUsageDescription</key>
