--- a/NavidromeClient/Info.plist
+++ b/NavidromeClient/Info.plist
@@ -2,23 +2,36 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<!-- ✅ CRITICAL FIX: Background Audio Permission -->
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+		<string>background-app-refresh</string>
+	</array>
+	
+	<!-- Existing configurations (unchanged) -->
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	
 	<key>BGTaskSchedulerPermittedIdentifiers</key>
 	<array>
 		<string>com.navidrome.client.refresh</string>
 	</array>
+	
 	<key>CFBundleIdentifier</key>
 	<string></string>
+	
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>audio-playback</string>
 	</array>
+	
 	<key>NSBluetoothAlwaysUsageDescription</key>
 	<string>This app uses Bluetooth to stream audio to external devices.</string>
+	
 	<key>NSBluetoothPeripheralUsageDescription</key>
 	<string>This app uses Bluetooth to stream audio to external devices.</string>
 </dict>
